enable velocity Isp relation

--- a/GameData/CryoTanks/Patches/CryoTanksMultimodeEngines.cfg
+++ b/GameData/CryoTanks/Patches/CryoTanksMultimodeEngines.cfg
@@ -66,6 +66,7 @@
 			key = 3.0 0.66
 			key = 5.7 0.50
 		}
+		useVelCurveIsp = true
 
 		// velCurve and atmCurve left intact
 		@maxThrust = 175
@@ -126,6 +127,7 @@
 			key = 3.0 0.66
 			key = 5.7 0.50
 		}
+		useVelCurveIsp = true
 
 		// velCurve and atmCurve left intact
 		@maxThrust = 185
@@ -185,6 +187,7 @@
 			key = 3.0 0.66
 			key = 5.7 0.50
 		}
+		useVelCurveIsp = true
 
 		// velCurve and atmCurve left intact
 		@maxThrust = 730
@@ -244,6 +247,7 @@
 			key = 3.0 0.66
 			key = 5.7 0.50
 		}
+		useVelCurveIsp = true
 
 		// velCurve and atmCurve left intact
 		@maxThrust = 690
