--- a/GameData/CryoTanks/Patches/CryoTanksMultimodeEngines.cfg
+++ b/GameData/CryoTanks/Patches/CryoTanksMultimodeEngines.cfg
@@ -57,6 +57,15 @@
 			key = 0 6000 // max Isp
 		}
 
+		// mach number + fraction of thrust
+		!velCurve
+		velCurve
+		{
+			key = 0.0 0.50
+			key = 2.0 1.00
+			key = 5.7 0.36
+		}
+
 		// mach number + fraction of Isp
 		velCurveIsp
 		{
@@ -68,7 +77,7 @@
 		}
 		useVelCurveIsp = true
 
-		// velCurve and atmCurve left intact
+		// atmCurve left intact
 		@maxThrust = 175
 	}
 
@@ -118,6 +127,15 @@
 			key = 0 6000 // max Isp
 		}
 
+		// mach number + fraction of thrust
+		!velCurve
+		velCurve
+		{
+			key = 0.0 0.50
+			key = 2.0 1.00
+			key = 5.7 0.36
+		}
+
 		// mach number + fraction of Isp
 		velCurveIsp
 		{
@@ -129,7 +147,7 @@
 		}
 		useVelCurveIsp = true
 
-		// velCurve and atmCurve left intact
+		// atmCurve left intact
 		@maxThrust = 185
 	}
 
@@ -178,6 +196,15 @@
 			key = 0 6000 // max Isp
 		}
 
+		// mach number + fraction of thrust
+		!velCurve
+		velCurve
+		{
+			key = 0.0 0.50
+			key = 2.0 1.00
+			key = 5.7 0.36
+		}
+
 		// mach number + fraction of Isp
 		velCurveIsp
 		{
@@ -189,7 +216,7 @@
 		}
 		useVelCurveIsp = true
 
-		// velCurve and atmCurve left intact
+		// atmCurve left intact
 		@maxThrust = 730
 	}
 
@@ -238,6 +265,15 @@
 			key = 0 6000 // max Isp
 		}
 
+		// mach number + fraction of thrust
+		!velCurve
+		velCurve
+		{
+			key = 0.0 0.50
+			key = 2.0 1.00
+			key = 5.7 0.36
+		}
+
 		// mach number + fraction of Isp
 		velCurveIsp
 		{
@@ -249,7 +285,7 @@
 		}
 		useVelCurveIsp = true
 
-		// velCurve and atmCurve left intact
+		// atmCurve left intact
 		@maxThrust = 690
 	}
 
