scale velocity curve to account for reduction in thrust due to atmosphere

--- a/GameData/CryoTanks/Patches/CryoTanksMultimodeEngines.cfg
+++ b/GameData/CryoTanks/Patches/CryoTanksMultimodeEngines.cfg
@@ -58,12 +58,23 @@
 		}
 
 		// mach number + fraction of thrust
+		// compensating for effects of atmCurve to reach desired TWR
+		// mach 0.8 is reached at a pressure of ~1.0 ATM --> keep 0.70
+		// mach 1.0 is reached at a pressure of ~0.5 ATM --> increase 0.75 by factor 1.4
+		// mach 2.0 is reached at a pressure of ~0.1 ATM --> increase 1.00 by factor 3.3
+		// mach 3.0 is reached at a pressure of ~0.07 ATM --> increase 0.75 by factor 4.0
+		// mach 4.0 is reached at a pressure of ~0.05 ATM --> increase 0.50 by factor 5.0
+		// mach 5.0 is reached at a pressure of ~0.05 ATM --> increase 0.36 by a factor 5.0
 		!velCurve
 		velCurve
 		{
 			key = 0.0 0.50
-			key = 2.0 1.00
-			key = 5.7 0.36
+			key = 0.8 0.70
+			key = 1.0 1.05
+			key = 2.0 3.30
+			key = 3.0 3.00
+			key = 4.0 2.50
+			key = 5.7 1.80
 		}
 
 		// mach number + fraction of Isp
@@ -128,12 +139,23 @@
 		}
 
 		// mach number + fraction of thrust
+		// compensating for effects of atmCurve to reach desired TWR
+		// mach 0.8 is reached at a pressure of ~1.0 ATM --> keep 0.70
+		// mach 1.0 is reached at a pressure of ~0.5 ATM --> increase 0.75 by factor 1.4
+		// mach 2.0 is reached at a pressure of ~0.1 ATM --> increase 1.00 by factor 3.3
+		// mach 3.0 is reached at a pressure of ~0.07 ATM --> increase 0.75 by factor 4.0
+		// mach 4.0 is reached at a pressure of ~0.05 ATM --> increase 0.50 by factor 5.0
+		// mach 5.0 is reached at a pressure of ~0.05 ATM --> increase 0.36 by a factor 5.0
 		!velCurve
 		velCurve
 		{
 			key = 0.0 0.50
-			key = 2.0 1.00
-			key = 5.7 0.36
+			key = 0.8 0.70
+			key = 1.0 1.05
+			key = 2.0 3.30
+			key = 3.0 3.00
+			key = 4.0 2.50
+			key = 5.7 1.80
 		}
 
 		// mach number + fraction of Isp
@@ -197,12 +219,23 @@
 		}
 
 		// mach number + fraction of thrust
+		// compensating for effects of atmCurve to reach desired TWR
+		// mach 0.8 is reached at a pressure of ~1.0 ATM --> keep 0.70
+		// mach 1.0 is reached at a pressure of ~0.5 ATM --> increase 0.75 by factor 1.4
+		// mach 2.0 is reached at a pressure of ~0.1 ATM --> increase 1.00 by factor 3.3
+		// mach 3.0 is reached at a pressure of ~0.07 ATM --> increase 0.75 by factor 4.0
+		// mach 4.0 is reached at a pressure of ~0.05 ATM --> increase 0.50 by factor 5.0
+		// mach 5.0 is reached at a pressure of ~0.05 ATM --> increase 0.36 by a factor 5.0
 		!velCurve
 		velCurve
 		{
 			key = 0.0 0.50
-			key = 2.0 1.00
-			key = 5.7 0.36
+			key = 0.8 0.70
+			key = 1.0 1.05
+			key = 2.0 3.30
+			key = 3.0 3.00
+			key = 4.0 2.50
+			key = 5.7 1.80
 		}
 
 		// mach number + fraction of Isp
@@ -266,12 +299,23 @@
 		}
 
 		// mach number + fraction of thrust
+		// compensating for effects of atmCurve to reach desired TWR
+		// mach 0.8 is reached at a pressure of ~1.0 ATM --> keep 0.70
+		// mach 1.0 is reached at a pressure of ~0.5 ATM --> increase 0.75 by factor 1.4
+		// mach 2.0 is reached at a pressure of ~0.1 ATM --> increase 1.00 by factor 3.3
+		// mach 3.0 is reached at a pressure of ~0.07 ATM --> increase 0.75 by factor 4.0
+		// mach 4.0 is reached at a pressure of ~0.05 ATM --> increase 0.50 by factor 5.0
+		// mach 5.0 is reached at a pressure of ~0.05 ATM --> increase 0.36 by a factor 5.0
 		!velCurve
 		velCurve
 		{
 			key = 0.0 0.50
-			key = 2.0 1.00
-			key = 5.7 0.36
+			key = 0.8 0.70
+			key = 1.0 1.05
+			key = 2.0 3.30
+			key = 3.0 3.00
+			key = 4.0 2.50
+			key = 5.7 1.80
 		}
 
 		// mach number + fraction of Isp
