fix air breathing balance

--- a/GameData/CryoTanks/Patches/CryoTanksMultimodeEngines.cfg
+++ b/GameData/CryoTanks/Patches/CryoTanksMultimodeEngines.cfg
@@ -4,7 +4,7 @@
 // Optional configuring multimode engines (based on SABRE engine concept design by Reaction Engines Limited) to use LH2
 // Cryogenic fluids are used for the precooler (otherwise the engine would melt during air compression)
 // and LH2 in general achieves higher specific momentum (Isp) compared to Kerosine (LiquidFuel)
-// Balance is targetted at stock, which is means Isp is OK, but thrust to weight ratio in real life would be ~50% higher (based on SMURFF observations)
+// Balance is targetted at stock, which is means Isp is OK, but thrust to weight ratio in real life would be ~50% higher (based on SMURFF observations) for any rocket engine
 // This expresses itself in engines that are too heavy, the mass has been increased to compensate for the very low deltaV requirements of Kerbin
 // But thrust on the low side for Earth level requirements (as opposed to Kerbin)
 
@@ -13,11 +13,11 @@
 // And for thrust budgets: https://web.archive.org/web/20160328220308/http://www.reactionengines.co.uk/tech_docs/SKYLON_Users_Manual_Rev_2.1.pdf
 // This is based on Skylon C1/C2, which is lower performance than Skylon D1, but for the latter less data is available
 
+// Air breathing engines perform comparable in stock as they do in real life
 // TWR target:
-// 7.0 at mach 0.0 in real life, 4.7 at mach 0.0 in stock scale Kerbin
-// 14.0 at mach 2.0 in real life, 9.3 at mach 2.0 in stock scale Kerbin
-// 5.0 at mach 5.7 in real life, 3.3 at mach 5.7 in stock scale Kerbin
-// So peak TWR in air on Kerbin is 9.3 (50% lower)
+// 7.0 at mach 0.0
+// 14.0 at mach 2.0
+// 5.0 at mach 5.7
 
 // If we take the engine + nacelle masses we arrive at approximately 15000 kg, which is for 2 engines, each delivering 1.8 MN of thrust in rocket mode.
 // We arrive at TWR of 24.5 (rocket engines typically do in the range of 60-80)
@@ -32,9 +32,9 @@
 // The gameparts that we're dealing with are configured between 2000 kg and 7900 kg, which is close enough to leave alone
 
 // Baseline figures summary for 1.25 meter parts
-// ~300 KN thrust rocket, ~185 KN thrust airbreathing@mach 2, ~2000 kg mass, peak Isp air-breathing is 6000@mach 1, peak Isp rocket mode is 460
+// ~300 KN thrust rocket, ~275 KN thrust airbreathing@mach 2, ~2000 kg mass, peak Isp air-breathing is 6000@mach 1, peak Isp rocket mode is 460
 // Baseline figures summary for the 2.50 meter parts
-// ~1.25 MN thrust rocket. ~710 KN thrust airbreating@mach 2, ~7800 kg mass, peak Isp air-breathing is 6000@mach 1, peak Isp rocket mode is 460
+// ~1.25 MN thrust rocket. ~1070 KN thrust airbreating@mach 2, ~7800 kg mass, peak Isp air-breathing is 6000@mach 1, peak Isp rocket mode is 460
 
 // slightly worse engine than nfa-multimodal-125-1, except a bit lower mass
 @PART[RAPIER]:NEEDS[CryoTanks,!RealFuels,CryoTanksMultimodeEngines]:FOR[CryoTanks]
@@ -89,7 +89,7 @@
 		useVelCurveIsp = true
 
 		// atmCurve left intact
-		@maxThrust = 175
+		@maxThrust = 265
 	}
 
 	@MODULE[ModuleEngines*]:HAS[#engineID[ClosedCycle]]
@@ -170,7 +170,7 @@
 		useVelCurveIsp = true
 
 		// atmCurve left intact
-		@maxThrust = 185
+		@maxThrust = 275
 	}
 
 	@MODULE[ModuleEngines*]:HAS[#engineID[ClosedCycle]]
@@ -250,7 +250,7 @@
 		useVelCurveIsp = true
 
 		// atmCurve left intact
-		@maxThrust = 730
+		@maxThrust = 1090
 	}
 
 	@MODULE[ModuleEngines*]:HAS[#engineID[ClosedCycle]]
@@ -330,7 +330,7 @@
 		useVelCurveIsp = true
 
 		// atmCurve left intact
-		@maxThrust = 690
+		@maxThrust = 1050
 	}
 
 	@MODULE[ModuleEngines*]:HAS[#engineID[ClosedCycle]]
