--- a/GameData/CryoTanks/Patches/CryoTanksMultimodeEngines.cfg
+++ b/GameData/CryoTanks/Patches/CryoTanksMultimodeEngines.cfg
@@ -59,31 +59,35 @@
 
 		// mach number + fraction of thrust
 		// compensating for effects of atmCurve to reach desired TWR
-		// mach 0.8 is reached at a pressure of ~1.0 ATM --> keep 0.70
-		// mach 1.0 is reached at a pressure of ~0.5 ATM --> increase 0.75 by factor 1.4
-		// mach 2.0 is reached at a pressure of ~0.1 ATM --> increase 1.00 by factor 3.3
-		// mach 3.0 is reached at a pressure of ~0.07 ATM --> increase 0.75 by factor 4.0
-		// mach 4.0 is reached at a pressure of ~0.05 ATM --> increase 0.50 by factor 5.0
-		// mach 5.0 is reached at a pressure of ~0.05 ATM --> increase 0.36 by a factor 5.0
+		// compensating for the lowered thrust due to less than maximum Isp
+		// mach 0.0 is reached at a pressure of ~1.0 ATM --> increase 0.50 by factor 1.3 (lowered Isp compensation)
+		// mach 0.8 is reached at a pressure of ~1.0 ATM --> increase 0.70 by factor 1.1 (lowered Isp compensation)
+		// mach 1.0 is reached at a pressure of ~0.5 ATM --> increase 0.75 by factor 1.4 (atmosphere)
+		// mach 2.0 is reached at a pressure of ~0.1 ATM --> increase 1.00 by factor 3.3 (atmosphere) and by factor 1.3 (lowered Isp compensation)
+		// mach 3.0 is reached at a pressure of ~0.07 ATM --> increase 0.75 by factor 4.0 (atmosphere) and by factor 1.5 (lowered Isp compensation)
+		// mach 4.0 is reached at a pressure of ~0.05 ATM --> increase 0.50 by factor 5.0 (atmosphere) and by factor 1.7 (lowered Isp compensation)
+		// mach 5.0 is reached at a pressure of ~0.05 ATM --> increase 0.36 by a factor 5.0 (atmosphere) and by factor 2.0 (lowered Isp compensation)
 		!velCurve
 		velCurve
 		{
-			key = 0.0 0.50
-			key = 0.8 0.70
+			key = 0.0 0.65
+			key = 0.8 0.77
 			key = 1.0 1.05
-			key = 2.0 3.30
-			key = 3.0 3.00
-			key = 4.0 2.50
-			key = 5.7 1.80
+			key = 2.0 4.29
+			key = 3.0 4.50
+			key = 4.0 4.25
+			key = 5.7 3.60
 		}
 
 		// mach number + fraction of Isp
 		velCurveIsp
 		{
 			key = 0.0 0.75
+			key = 0.8 0.95
 			key = 1.0 1.00
 			key = 2.0 0.75
 			key = 3.0 0.66
+			key = 4.0 0.60
 			key = 5.7 0.50
 		}
 		useVelCurveIsp = true
@@ -140,31 +144,35 @@
 
 		// mach number + fraction of thrust
 		// compensating for effects of atmCurve to reach desired TWR
-		// mach 0.8 is reached at a pressure of ~1.0 ATM --> keep 0.70
-		// mach 1.0 is reached at a pressure of ~0.5 ATM --> increase 0.75 by factor 1.4
-		// mach 2.0 is reached at a pressure of ~0.1 ATM --> increase 1.00 by factor 3.3
-		// mach 3.0 is reached at a pressure of ~0.07 ATM --> increase 0.75 by factor 4.0
-		// mach 4.0 is reached at a pressure of ~0.05 ATM --> increase 0.50 by factor 5.0
-		// mach 5.0 is reached at a pressure of ~0.05 ATM --> increase 0.36 by a factor 5.0
+		// compensating for the lowered thrust due to less than maximum Isp
+		// mach 0.0 is reached at a pressure of ~1.0 ATM --> increase 0.50 by factor 1.3 (lowered Isp compensation)
+		// mach 0.8 is reached at a pressure of ~1.0 ATM --> increase 0.70 by factor 1.1 (lowered Isp compensation)
+		// mach 1.0 is reached at a pressure of ~0.5 ATM --> increase 0.75 by factor 1.4 (atmosphere)
+		// mach 2.0 is reached at a pressure of ~0.1 ATM --> increase 1.00 by factor 3.3 (atmosphere) and by factor 1.3 (lowered Isp compensation)
+		// mach 3.0 is reached at a pressure of ~0.07 ATM --> increase 0.75 by factor 4.0 (atmosphere) and by factor 1.5 (lowered Isp compensation)
+		// mach 4.0 is reached at a pressure of ~0.05 ATM --> increase 0.50 by factor 5.0 (atmosphere) and by factor 1.7 (lowered Isp compensation)
+		// mach 5.0 is reached at a pressure of ~0.05 ATM --> increase 0.36 by a factor 5.0 (atmosphere) and by factor 2.0 (lowered Isp compensation)
 		!velCurve
 		velCurve
 		{
-			key = 0.0 0.50
-			key = 0.8 0.70
+			key = 0.0 0.65
+			key = 0.8 0.77
 			key = 1.0 1.05
-			key = 2.0 3.30
-			key = 3.0 3.00
-			key = 4.0 2.50
-			key = 5.7 1.80
+			key = 2.0 4.29
+			key = 3.0 4.50
+			key = 4.0 4.25
+			key = 5.7 3.60
 		}
 
 		// mach number + fraction of Isp
 		velCurveIsp
 		{
 			key = 0.0 0.75
+			key = 0.8 0.95
 			key = 1.0 1.00
 			key = 2.0 0.75
 			key = 3.0 0.66
+			key = 4.0 0.60
 			key = 5.7 0.50
 		}
 		useVelCurveIsp = true
@@ -220,31 +228,35 @@
 
 		// mach number + fraction of thrust
 		// compensating for effects of atmCurve to reach desired TWR
-		// mach 0.8 is reached at a pressure of ~1.0 ATM --> keep 0.70
-		// mach 1.0 is reached at a pressure of ~0.5 ATM --> increase 0.75 by factor 1.4
-		// mach 2.0 is reached at a pressure of ~0.1 ATM --> increase 1.00 by factor 3.3
-		// mach 3.0 is reached at a pressure of ~0.07 ATM --> increase 0.75 by factor 4.0
-		// mach 4.0 is reached at a pressure of ~0.05 ATM --> increase 0.50 by factor 5.0
-		// mach 5.0 is reached at a pressure of ~0.05 ATM --> increase 0.36 by a factor 5.0
+		// compensating for the lowered thrust due to less than maximum Isp
+		// mach 0.0 is reached at a pressure of ~1.0 ATM --> increase 0.50 by factor 1.3 (lowered Isp compensation)
+		// mach 0.8 is reached at a pressure of ~1.0 ATM --> increase 0.70 by factor 1.1 (lowered Isp compensation)
+		// mach 1.0 is reached at a pressure of ~0.5 ATM --> increase 0.75 by factor 1.4 (atmosphere)
+		// mach 2.0 is reached at a pressure of ~0.1 ATM --> increase 1.00 by factor 3.3 (atmosphere) and by factor 1.3 (lowered Isp compensation)
+		// mach 3.0 is reached at a pressure of ~0.07 ATM --> increase 0.75 by factor 4.0 (atmosphere) and by factor 1.5 (lowered Isp compensation)
+		// mach 4.0 is reached at a pressure of ~0.05 ATM --> increase 0.50 by factor 5.0 (atmosphere) and by factor 1.7 (lowered Isp compensation)
+		// mach 5.0 is reached at a pressure of ~0.05 ATM --> increase 0.36 by a factor 5.0 (atmosphere) and by factor 2.0 (lowered Isp compensation)
 		!velCurve
 		velCurve
 		{
-			key = 0.0 0.50
-			key = 0.8 0.70
+			key = 0.0 0.65
+			key = 0.8 0.77
 			key = 1.0 1.05
-			key = 2.0 3.30
-			key = 3.0 3.00
-			key = 4.0 2.50
-			key = 5.7 1.80
+			key = 2.0 4.29
+			key = 3.0 4.50
+			key = 4.0 4.25
+			key = 5.7 3.60
 		}
 
 		// mach number + fraction of Isp
 		velCurveIsp
 		{
 			key = 0.0 0.75
+			key = 0.8 0.95
 			key = 1.0 1.00
 			key = 2.0 0.75
 			key = 3.0 0.66
+			key = 4.0 0.60
 			key = 5.7 0.50
 		}
 		useVelCurveIsp = true
@@ -300,31 +312,35 @@
 
 		// mach number + fraction of thrust
 		// compensating for effects of atmCurve to reach desired TWR
-		// mach 0.8 is reached at a pressure of ~1.0 ATM --> keep 0.70
-		// mach 1.0 is reached at a pressure of ~0.5 ATM --> increase 0.75 by factor 1.4
-		// mach 2.0 is reached at a pressure of ~0.1 ATM --> increase 1.00 by factor 3.3
-		// mach 3.0 is reached at a pressure of ~0.07 ATM --> increase 0.75 by factor 4.0
-		// mach 4.0 is reached at a pressure of ~0.05 ATM --> increase 0.50 by factor 5.0
-		// mach 5.0 is reached at a pressure of ~0.05 ATM --> increase 0.36 by a factor 5.0
+		// compensating for the lowered thrust due to less than maximum Isp
+		// mach 0.0 is reached at a pressure of ~1.0 ATM --> increase 0.50 by factor 1.3 (lowered Isp compensation)
+		// mach 0.8 is reached at a pressure of ~1.0 ATM --> increase 0.70 by factor 1.1 (lowered Isp compensation)
+		// mach 1.0 is reached at a pressure of ~0.5 ATM --> increase 0.75 by factor 1.4 (atmosphere)
+		// mach 2.0 is reached at a pressure of ~0.1 ATM --> increase 1.00 by factor 3.3 (atmosphere) and by factor 1.3 (lowered Isp compensation)
+		// mach 3.0 is reached at a pressure of ~0.07 ATM --> increase 0.75 by factor 4.0 (atmosphere) and by factor 1.5 (lowered Isp compensation)
+		// mach 4.0 is reached at a pressure of ~0.05 ATM --> increase 0.50 by factor 5.0 (atmosphere) and by factor 1.7 (lowered Isp compensation)
+		// mach 5.0 is reached at a pressure of ~0.05 ATM --> increase 0.36 by a factor 5.0 (atmosphere) and by factor 2.0 (lowered Isp compensation)
 		!velCurve
 		velCurve
 		{
-			key = 0.0 0.50
-			key = 0.8 0.70
+			key = 0.0 0.65
+			key = 0.8 0.77
 			key = 1.0 1.05
-			key = 2.0 3.30
-			key = 3.0 3.00
-			key = 4.0 2.50
-			key = 5.7 1.80
+			key = 2.0 4.29
+			key = 3.0 4.50
+			key = 4.0 4.25
+			key = 5.7 3.60
 		}
 
 		// mach number + fraction of Isp
 		velCurveIsp
 		{
 			key = 0.0 0.75
+			key = 0.8 0.95
 			key = 1.0 1.00
 			key = 2.0 0.75
 			key = 3.0 0.66
+			key = 4.0 0.60
 			key = 5.7 0.50
 		}
 		useVelCurveIsp = true
