--- a/GameData/CryoTanks/Patches/CryoTanksMultimodeEngines.cfg
+++ b/GameData/CryoTanks/Patches/CryoTanksMultimodeEngines.cfg
@@ -36,8 +36,7 @@
 // Baseline figures summary for the 2.50 meter parts
 // ~1.25 MN thrust rocket. ~1070 KN thrust airbreating@mach 2, ~7800 kg mass, peak Isp air-breathing is 6000@mach 1, peak Isp rocket mode is 460
 
-// slightly worse engine than nfa-multimodal-125-1, except a bit lower mass
-@PART[RAPIER]:NEEDS[CryoTanks,!RealFuels,CryoTanksMultimodeEngines]:FOR[CryoTanks]
+@PART[RAPIER,nfa-multimodal-*]:NEEDS[CryoTanks,!RealFuels,CryoTanksMultimodeEngines]:FOR[CryoTanks]
 {
 	@MODULE[ModuleEngines*]:HAS[#engineID[AirBreathing]]
 	{
@@ -93,7 +92,6 @@
 		useVelCurveIsp = true
 
 		// atmCurve left intact
-		@maxThrust = 265
 	}
 
 	@MODULE[ModuleEngines*]:HAS[#engineID[ClosedCycle]]
@@ -108,7 +106,19 @@
 		{
 			@ratio = 1
 		}
+	}
+}
 
+// slightly worse engine than nfa-multimodal-125-1, except a bit lower mass
+@PART[RAPIER]:NEEDS[CryoTanks,!RealFuels,CryoTanksMultimodeEngines]:FOR[CryoTanks]
+{
+	@MODULE[ModuleEngines*]:HAS[#engineID[AirBreathing]]
+	{
+		@maxThrust = 265
+	}
+
+	@MODULE[ModuleEngines*]:HAS[#engineID[ClosedCycle]]
+	{
 		!atmosphereCurve {}
 		atmosphereCurve
 		{
@@ -126,74 +136,11 @@
 {
 	@MODULE[ModuleEngines*]:HAS[#engineID[AirBreathing]]
 	{
-		@PROPELLANT[LiquidFuel]
-		{
-			@name = LqdHydrogen
-		}
-
-		@PROPELLANT[IntakeAir]
-		{
-			@ratio /= 20
-		}
-
-		!atmosphereCurve
-		atmosphereCurve
-		{
-			key = 0 6000 // max Isp
-		}
-
-		// mach number + fraction of thrust
-		// compensating for effects of atmCurve to reach desired TWR
-		// compensating for the lowered thrust due to less than maximum Isp
-		// mach 0.0 is reached at a pressure of ~1.0 ATM --> increase 0.50 by factor 1.3 (lowered Isp compensation)
-		// mach 0.8 is reached at a pressure of ~1.0 ATM --> increase 0.70 by factor 1.1 (lowered Isp compensation)
-		// mach 1.0 is reached at a pressure of ~0.5 ATM --> increase 0.75 by factor 1.4 (atmosphere)
-		// mach 2.0 is reached at a pressure of ~0.1 ATM --> increase 1.00 by factor 3.3 (atmosphere) and by factor 1.3 (lowered Isp compensation)
-		// mach 3.0 is reached at a pressure of ~0.07 ATM --> increase 0.75 by factor 4.0 (atmosphere) and by factor 1.5 (lowered Isp compensation)
-		// mach 4.0 is reached at a pressure of ~0.05 ATM --> increase 0.50 by factor 5.0 (atmosphere) and by factor 1.7 (lowered Isp compensation)
-		// mach 5.0 is reached at a pressure of ~0.05 ATM --> increase 0.36 by a factor 5.0 (atmosphere) and by factor 2.0 (lowered Isp compensation)
-		!velCurve
-		velCurve
-		{
-			key = 0.0 0.65
-			key = 0.8 0.77
-			key = 1.0 1.05
-			key = 2.0 4.29
-			key = 3.0 4.50
-			key = 4.0 4.25
-			key = 5.7 3.60
-		}
-
-		// mach number + fraction of Isp
-		velCurveIsp
-		{
-			key = 0.0 0.75
-			key = 0.8 0.95
-			key = 1.0 1.00
-			key = 2.0 0.75
-			key = 3.0 0.66
-			key = 4.0 0.60
-			key = 5.7 0.50
-		}
-		useVelCurveIsp = true
-
-		// atmCurve left intact
 		@maxThrust = 275
 	}
 
 	@MODULE[ModuleEngines*]:HAS[#engineID[ClosedCycle]]
 	{
-		@PROPELLANT[LiquidFuel]
-		{
-			@name = LqdHydrogen
-			@ratio = 15
-		}
-
-		@PROPELLANT[Oxidizer]
-		{
-			@ratio = 1
-		}
-
 		!atmosphereCurve {}
 		atmosphereCurve
 		{
@@ -210,74 +157,11 @@
 {
 	@MODULE[ModuleEngines*]:HAS[#engineID[AirBreathing]]
 	{
-		@PROPELLANT[LiquidFuel]
-		{
-			@name = LqdHydrogen
-		}
-
-		@PROPELLANT[IntakeAir]
-		{
-			@ratio /= 20
-		}
-
-		!atmosphereCurve
-		atmosphereCurve
-		{
-			key = 0 6000 // max Isp
-		}
-
-		// mach number + fraction of thrust
-		// compensating for effects of atmCurve to reach desired TWR
-		// compensating for the lowered thrust due to less than maximum Isp
-		// mach 0.0 is reached at a pressure of ~1.0 ATM --> increase 0.50 by factor 1.3 (lowered Isp compensation)
-		// mach 0.8 is reached at a pressure of ~1.0 ATM --> increase 0.70 by factor 1.1 (lowered Isp compensation)
-		// mach 1.0 is reached at a pressure of ~0.5 ATM --> increase 0.75 by factor 1.4 (atmosphere)
-		// mach 2.0 is reached at a pressure of ~0.1 ATM --> increase 1.00 by factor 3.3 (atmosphere) and by factor 1.3 (lowered Isp compensation)
-		// mach 3.0 is reached at a pressure of ~0.07 ATM --> increase 0.75 by factor 4.0 (atmosphere) and by factor 1.5 (lowered Isp compensation)
-		// mach 4.0 is reached at a pressure of ~0.05 ATM --> increase 0.50 by factor 5.0 (atmosphere) and by factor 1.7 (lowered Isp compensation)
-		// mach 5.0 is reached at a pressure of ~0.05 ATM --> increase 0.36 by a factor 5.0 (atmosphere) and by factor 2.0 (lowered Isp compensation)
-		!velCurve
-		velCurve
-		{
-			key = 0.0 0.65
-			key = 0.8 0.77
-			key = 1.0 1.05
-			key = 2.0 4.29
-			key = 3.0 4.50
-			key = 4.0 4.25
-			key = 5.7 3.60
-		}
-
-		// mach number + fraction of Isp
-		velCurveIsp
-		{
-			key = 0.0 0.75
-			key = 0.8 0.95
-			key = 1.0 1.00
-			key = 2.0 0.75
-			key = 3.0 0.66
-			key = 4.0 0.60
-			key = 5.7 0.50
-		}
-		useVelCurveIsp = true
-
-		// atmCurve left intact
 		@maxThrust = 1090
 	}
 
 	@MODULE[ModuleEngines*]:HAS[#engineID[ClosedCycle]]
 	{
-		@PROPELLANT[LiquidFuel]
-		{
-			@name = LqdHydrogen
-			@ratio = 15
-		}
-
-		@PROPELLANT[Oxidizer]
-		{
-			@ratio = 1
-		}
-
 		!atmosphereCurve {}
 		atmosphereCurve
 		{
@@ -294,74 +178,11 @@
 {
 	@MODULE[ModuleEngines*]:HAS[#engineID[AirBreathing]]
 	{
-		@PROPELLANT[LiquidFuel]
-		{
-			@name = LqdHydrogen
-		}
-
-		@PROPELLANT[IntakeAir]
-		{
-			@ratio /= 20
-		}
-
-		!atmosphereCurve
-		atmosphereCurve
-		{
-			key = 0 6000 // max Isp
-		}
-
-		// mach number + fraction of thrust
-		// compensating for effects of atmCurve to reach desired TWR
-		// compensating for the lowered thrust due to less than maximum Isp
-		// mach 0.0 is reached at a pressure of ~1.0 ATM --> increase 0.50 by factor 1.3 (lowered Isp compensation)
-		// mach 0.8 is reached at a pressure of ~1.0 ATM --> increase 0.70 by factor 1.1 (lowered Isp compensation)
-		// mach 1.0 is reached at a pressure of ~0.5 ATM --> increase 0.75 by factor 1.4 (atmosphere)
-		// mach 2.0 is reached at a pressure of ~0.1 ATM --> increase 1.00 by factor 3.3 (atmosphere) and by factor 1.3 (lowered Isp compensation)
-		// mach 3.0 is reached at a pressure of ~0.07 ATM --> increase 0.75 by factor 4.0 (atmosphere) and by factor 1.5 (lowered Isp compensation)
-		// mach 4.0 is reached at a pressure of ~0.05 ATM --> increase 0.50 by factor 5.0 (atmosphere) and by factor 1.7 (lowered Isp compensation)
-		// mach 5.0 is reached at a pressure of ~0.05 ATM --> increase 0.36 by a factor 5.0 (atmosphere) and by factor 2.0 (lowered Isp compensation)
-		!velCurve
-		velCurve
-		{
-			key = 0.0 0.65
-			key = 0.8 0.77
-			key = 1.0 1.05
-			key = 2.0 4.29
-			key = 3.0 4.50
-			key = 4.0 4.25
-			key = 5.7 3.60
-		}
-
-		// mach number + fraction of Isp
-		velCurveIsp
-		{
-			key = 0.0 0.75
-			key = 0.8 0.95
-			key = 1.0 1.00
-			key = 2.0 0.75
-			key = 3.0 0.66
-			key = 4.0 0.60
-			key = 5.7 0.50
-		}
-		useVelCurveIsp = true
-
-		// atmCurve left intact
 		@maxThrust = 1050
 	}
 
 	@MODULE[ModuleEngines*]:HAS[#engineID[ClosedCycle]]
 	{
-		@PROPELLANT[LiquidFuel]
-		{
-			@name = LqdHydrogen
-			@ratio = 15
-		}
-
-		@PROPELLANT[Oxidizer]
-		{
-			@ratio = 1
-		}
-
 		!atmosphereCurve {}
 		atmosphereCurve
 		{
