--- a/GameData/CryoTanks/Patches/CryoTanksMultimodeEngines.cfg
+++ b/GameData/CryoTanks/Patches/CryoTanksMultimodeEngines.cfg
@@ -60,8 +60,8 @@
 		// compensating for effects of atmCurve to reach desired TWR
 		// compensating for the lowered thrust due to less than maximum Isp
 		// mach 0.0 is reached at a pressure of ~1.00 ATM --> increase 0.50 by factor 1.3 (lowered Isp compensation)
-		// mach 0.8 is reached at a pressure of ~1.00 ATM --> increase 0.70 by factor 1.1 (lowered Isp compensation)
-		// mach 1.0 is reached at a pressure of ~0.50 ATM --> increase 0.75 by factor 1.4 (atmosphere)
+		// mach 0.8 is reached at a pressure of ~1.00 ATM, but needs to be maintained at ~0.50 ATM as well --> increase 0.70 by factor 1.1 (lowered Isp compensation) and factor 1.4 (atmosphere)
+		// mach 1.0 is reached at a pressure of ~0.35 ATM --> increase 0.75 by factor 2.0 (atmosphere)
 		// mach 2.0 is reached at a pressure of ~0.25 ATM --> increase 1.00 by factor 1.7 (atmosphere) and by factor 1.3 (lowered Isp compensation)
 		// mach 3.0 is reached at a pressure of ~0.10 ATM --> increase 0.75 by factor 3.0 (atmosphere) and by factor 1.5 (lowered Isp compensation)
 		// mach 4.0 is reached at a pressure of ~0.05 ATM --> increase 0.50 by factor 5.0 (atmosphere) and by factor 1.7 (lowered Isp compensation)
@@ -70,8 +70,8 @@
 		velCurve
 		{
 			key = 0.0 0.65
-			key = 0.8 0.77
-			key = 1.0 1.05
+			key = 0.8 1.08
+			key = 1.0 1.50
 			key = 2.0 2.21
 			key = 3.0 3.38
 			key = 4.0 4.25
