--- a/GameData/CryoTanks/Patches/CryoTanksMultimodeEngines.cfg
+++ b/GameData/CryoTanks/Patches/CryoTanksMultimodeEngines.cfg
@@ -66,6 +66,7 @@
 		// mach 3.0 is reached at a pressure of ~0.10 ATM --> increase 0.75 by factor 7.1 (atmosphere) and by factor 1.5 (lowered Isp compensation)
 		// mach 4.0 is reached at a pressure of ~0.05 ATM --> increase 0.50 by factor 9.2 (atmosphere) and by factor 1.7 (lowered Isp compensation)
 		// mach 5.7 is reached at a pressure of ~0.03 ATM --> increase 0.36 by a factor 10.4 (atmosphere) and by factor 2.0 (lowered Isp compensation)
+		// hard cut-off at mach 6.0
 		!velCurve
 		velCurve
 		{
@@ -76,6 +77,7 @@
 			key = 3.0 7.99
 			key = 4.0 7.82
 			key = 5.7 7.49
+			key = 6.0 0.00
 		}
 
 		// mach number + fraction of Isp
