--- a/GameData/CryoTanks/Patches/CryoTanksMultimodeEngines.cfg
+++ b/GameData/CryoTanks/Patches/CryoTanksMultimodeEngines.cfg
@@ -58,25 +58,24 @@
 
 		// mach number + fraction of thrust
 		// compensating for effects of atmCurve to reach desired TWR
-		// compensating for the lowered thrust due to less than maximum Isp
-		// mach 0.0 is reached at a pressure of ~1.00 ATM --> increase 0.50 by factor 1.3 (lowered Isp compensation)
+		// mach 0.0 is reached at a pressure of ~1.00 ATM --> keep 0.50
 		// mach 0.8 is reached at a pressure of ~1.00 ATM, but needs to be maintained at ~0.50 ATM as well, go for middle way of ~0.75 ATM --> increase 0.70 by factor 1.2 (atmosphere)
 		// mach 1.0 is reached at a pressure of ~0.85 ATM, but needs to be maintained at ~0.35 ATM as well. go for middle way of ~0.60 ATM --> increase 0.75 by factor 1.4 (atmosphere)
-		// mach 2.0 is reached at a pressure of ~0.30 ATM --> increase 1.00 by factor 3.5 (atmosphere) and by factor 1.3 (lowered Isp compensation)
-		// mach 3.0 is reached at a pressure of ~0.20 ATM --> increase 0.75 by factor 5.0 (atmosphere) and by factor 1.5 (lowered Isp compensation)
-		// mach 4.0 is reached at a pressure of ~0.07 ATM --> increase 0.50 by factor 8.2 (atmosphere) and by factor 1.7 (lowered Isp compensation)
-		// mach 5.7 is reached at a pressure of ~0.05 ATM --> increase 0.36 by a factor 9.2 (atmosphere) and by factor 2.0 (lowered Isp compensation)
+		// mach 2.0 is reached at a pressure of ~0.30 ATM --> increase 1.00 by factor 3.5 (atmosphere)
+		// mach 3.0 is reached at a pressure of ~0.20 ATM --> increase 0.75 by factor 5.0 (atmosphere)
+		// mach 4.0 is reached at a pressure of ~0.07 ATM --> increase 0.50 by factor 8.2 (atmosphere)
+		// mach 5.7 is reached at a pressure of ~0.05 ATM --> increase 0.36 by a factor 9.2 (atmosphere)
 		// hard cut-off at mach 6.0
 		!velCurve
 		velCurve
 		{
-			key = 0.0 0.65
+			key = 0.0 0.50
 			key = 0.8 0.84
 			key = 1.0 1.05
-			key = 2.0 4.55
-			key = 3.0 5.63
-			key = 4.0 6.97
-			key = 5.7 6.62
+			key = 2.0 3.50
+			key = 3.0 3.75
+			key = 4.0 4.10
+			key = 5.7 3.31
 			key = 6.0 0.00
 		}
 
